[package]
name = "ecs_game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["serialize"] }
bevy_ecs = "0.12"
bevy_app = "0.12"
bevy_time = "0.12"
bevy_math = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
rand = "0.8"
priority-queue = "1.3"
crossbeam-channel = "0.5"
